feat: team stats (#8)
